Se edito la docs, empece con los intercambios
